<resources>
    <string name="app_name">DiaryApp</string>
    <string name="action_settings">Settings</string>
    <string name="signInLbl">Sign In using your google account</string>
    <string name="hintUsername">Username</string>
    <string name="hintEmail">Email address</string>
    <string name="hintPassword">Password</string>
    <string name="btnRegister">Already registered? Sign In.</string>
    <string name="tvSignin">Already registered? Sign In.</string>
    <string name="tvRegister">Register</string>
    <string name="tvOr">Or</string>
    <string name="title_activity_diary">Journals</string>
    <string name="title_activity_add_item">Add Journal</string>
    <string name="addDiaryEntryBtnText">Add</string>
    <string name="saveDiaryEntryBtnText">Save</string>
    <string name="editDiaryEntryBtnText">Edit</string>
    <string name="dateLbl">Date</string>
    <string name="calendar_btn_text">Calendar</string>
    <string name="et_title">Title</string>
    <string name="et_date">Date</string>
    <string name="et_activity">Activity</string>
    <string name="tv_activityLbl">Activity</string>
    <string name="title_activity_view_item_entry">View Journal</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_cancel">Cancel</string>
    <string name="title_activity_edit_item">Edit Journal</string>
    <string name="no_data_available">No entries currently available.</string>
    <string name="date_label">Date Here</string>
    <string name="title_label">Title Here</string>
    <string name="tvSignInLabel">Sign In.</string>
    <string name="hintConfirmPassword">Confirm password</string>
    <string name="tvRegisterLabel">Registration</string>
    <string name="action_logout">Sign Out</string>
</resources>
