<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".com.project.vickie.diaryapp.db.EditItem"
    tools:showIn="@layout/activity_edit_item">

    <EditText
        android:id="@+id/etDate"
        android:layout_width="@dimen/etWidth"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginTop"
        android:ems="10"
        android:hint="@string/et_date"
        android:inputType="date" />

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="@dimen/etWidth"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="93dp"
        android:ems="10"
        android:hint="@string/et_title"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/etTitle"
        android:layout_marginTop="172dp"
        android:text="Activity:"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etActivity"
        android:layout_width="@dimen/etWidth"
        android:layout_height="81dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="198dp"
        android:ems="10"
        android:inputType="textMultiLine" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="174dp">

        <Button
            android:id="@+id/btnAddItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="66dp"
            android:text="@string/saveDiaryEntryBtnText"
            android:onClick="onSaveItemClick"/>

        <Button
            android:id="@+id/btnDeleteItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="59dp"
            android:onClick="onClickCancel"
            android:text="@string/btn_cancel" />
    </RelativeLayout>
</RelativeLayout>